--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    archivesBaseName="TeacherAttendancePlus"
     buildTypes {
         release {
             minifyEnabled false
